reference/5.1/Microsoft.PowerShell.Utility/Microsoft.PowerShell.Utility.md
---
Download Help Link: https://go.microsoft.com/fwlink/?linkid=390787
Help Version: 5.2.0.0
keywords: powershell,cmdlet
Locale: en-US
Module Guid: 1da87e53-152b-403e-98dc-74d7b4d63d59
Module Name: Microsoft.PowerShell.Utility
ms.date: 06/09/2017
schema: 2.0.0
title: Microsoft.PowerShell.Utility
ms.openlocfilehash: 8599ac6b6d6449e72eb76156cbe34de469fcfa1e
ms.sourcegitcommit: 9d95532afe81c235c8094eae28ab84b2f77f8c48
ms.translationtype: MT
ms.contentlocale: nl-NL
ms.lasthandoff: 10/07/2020
ms.locfileid: "93251979"
---
# <span data-ttu-id="e8e4d-103">Module micro soft. Power shell. Utility</span><span class="sxs-lookup"><span data-stu-id="e8e4d-103">Microsoft.PowerShell.Utility Module</span></span>

## <span data-ttu-id="e8e4d-104">Beschrijving</span><span class="sxs-lookup"><span data-stu-id="e8e4d-104">Description</span></span>

<span data-ttu-id="e8e4d-105">Deze sectie bevat de Help-onderwerpen voor de cmdlets die worden geïnstalleerd met de module micro soft. Power shell. Utility.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-105">This section contains the help topics for the cmdlets that are installed with the Microsoft.PowerShell.Utility module.</span></span> <span data-ttu-id="e8e4d-106">Deze module bevat cmdlets voor het beheren van de basis functies van Power shell.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-106">This module contains cmdlets that manage the basic features of PowerShell.</span></span>

## <span data-ttu-id="e8e4d-107">Micro soft. Power shell. Utility-cmdlets</span><span class="sxs-lookup"><span data-stu-id="e8e4d-107">Microsoft.PowerShell.Utility Cmdlets</span></span>

### [<span data-ttu-id="e8e4d-108">Lid toevoegen</span><span class="sxs-lookup"><span data-stu-id="e8e4d-108">Add-Member</span></span>](Add-Member.md)
<span data-ttu-id="e8e4d-109">Hiermee voegt u aangepaste eigenschappen en methoden toe aan een exemplaar van een Power shell-object.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-109">Adds custom properties and methods to an instance of a PowerShell object.</span></span>

### [<span data-ttu-id="e8e4d-110">Add-type</span><span class="sxs-lookup"><span data-stu-id="e8e4d-110">Add-Type</span></span>](Add-Type.md)
<span data-ttu-id="e8e4d-111">Hiermee wordt een Microsoft .NET Framework-klasse toegevoegd aan een Power shell-sessie.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-111">Adds a Microsoft .NET Framework class to a PowerShell session.</span></span>

### [<span data-ttu-id="e8e4d-112">Clear-variabele</span><span class="sxs-lookup"><span data-stu-id="e8e4d-112">Clear-Variable</span></span>](Clear-Variable.md)
<span data-ttu-id="e8e4d-113">Hiermee verwijdert u de waarde van een variabele.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-113">Deletes the value of a variable.</span></span>

### [<span data-ttu-id="e8e4d-114">Compare-object</span><span class="sxs-lookup"><span data-stu-id="e8e4d-114">Compare-Object</span></span>](Compare-Object.md)
<span data-ttu-id="e8e4d-115">Vergelijkt twee sets met objecten.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-115">Compares two sets of objects.</span></span>

### [<span data-ttu-id="e8e4d-116">Convert-String</span><span class="sxs-lookup"><span data-stu-id="e8e4d-116">Convert-String</span></span>](Convert-String.md)
<span data-ttu-id="e8e4d-117">Hiermee wordt een teken reeks opgemaakt die overeenkomt met voor beelden.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-117">Formats a string to match examples.</span></span>

### [<span data-ttu-id="e8e4d-118">ConvertFrom-CSV</span><span class="sxs-lookup"><span data-stu-id="e8e4d-118">ConvertFrom-Csv</span></span>](ConvertFrom-Csv.md)
<span data-ttu-id="e8e4d-119">Converteert object eigenschappen in CSV-indeling (door komma's gescheiden waarden) naar CSV-versies van de oorspronkelijke objecten.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-119">Converts object properties in comma-separated value (CSV) format into CSV versions of the original objects.</span></span>

### [<span data-ttu-id="e8e4d-120">ConvertFrom-JSON</span><span class="sxs-lookup"><span data-stu-id="e8e4d-120">ConvertFrom-Json</span></span>](ConvertFrom-Json.md)
<span data-ttu-id="e8e4d-121">Converteert een teken reeks in JSON-indeling naar een aangepast object.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-121">Converts a JSON-formatted string to a custom object.</span></span>

### [<span data-ttu-id="e8e4d-122">ConvertFrom-SddlString</span><span class="sxs-lookup"><span data-stu-id="e8e4d-122">ConvertFrom-SddlString</span></span>](ConvertFrom-SddlString.md)
<span data-ttu-id="e8e4d-123">Hiermee wordt een SDDL-teken reeks geconverteerd naar een aangepast object.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-123">Converts a SDDL string to a custom object.</span></span>

### [<span data-ttu-id="e8e4d-124">ConvertFrom-teken reeks</span><span class="sxs-lookup"><span data-stu-id="e8e4d-124">ConvertFrom-String</span></span>](ConvertFrom-String.md)
<span data-ttu-id="e8e4d-125">Hiermee worden gestructureerde eigenschappen geëxtraheerd en geparseerd uit de teken reeks inhoud.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-125">Extracts and parses structured properties from string content.</span></span>

### [<span data-ttu-id="e8e4d-126">ConvertFrom-StringData</span><span class="sxs-lookup"><span data-stu-id="e8e4d-126">ConvertFrom-StringData</span></span>](ConvertFrom-StringData.md)
<span data-ttu-id="e8e4d-127">Hiermee wordt een teken reeks met een of meer sleutel-en waardeparen geconverteerd naar een hash-tabel.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-127">Converts a string containing one or more key and value pairs to a hash table.</span></span>

### [<span data-ttu-id="e8e4d-128">ConvertTo-Csv</span><span class="sxs-lookup"><span data-stu-id="e8e4d-128">ConvertTo-Csv</span></span>](ConvertTo-Csv.md)
<span data-ttu-id="e8e4d-129">Converteert .NET-objecten naar een reeks teken reeksen met door komma's gescheiden waarden (CSV).</span><span class="sxs-lookup"><span data-stu-id="e8e4d-129">Converts .NET objects into a series of comma-separated value (CSV) strings.</span></span>

### [<span data-ttu-id="e8e4d-130">ConvertTo-Html</span><span class="sxs-lookup"><span data-stu-id="e8e4d-130">ConvertTo-Html</span></span>](ConvertTo-Html.md)
<span data-ttu-id="e8e4d-131">Hiermee converteert u .NET-objecten naar HTML die kunnen worden weer gegeven in een webbrowser.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-131">Converts .NET objects into HTML that can be displayed in a Web browser.</span></span>

### [<span data-ttu-id="e8e4d-132">ConvertTo-Json</span><span class="sxs-lookup"><span data-stu-id="e8e4d-132">ConvertTo-Json</span></span>](ConvertTo-Json.md)
<span data-ttu-id="e8e4d-133">Converteert een object naar een teken reeks in JSON-indeling.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-133">Converts an object to a JSON-formatted string.</span></span>

### [<span data-ttu-id="e8e4d-134">ConvertTo-Xml</span><span class="sxs-lookup"><span data-stu-id="e8e4d-134">ConvertTo-Xml</span></span>](ConvertTo-Xml.md)
<span data-ttu-id="e8e4d-135">Hiermee maakt u een XML-weer gave van een object.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-135">Creates an XML-based representation of an object.</span></span>

### [<span data-ttu-id="e8e4d-136">Fout opsporing-runs Pace</span><span class="sxs-lookup"><span data-stu-id="e8e4d-136">Debug-Runspace</span></span>](Debug-Runspace.md)
<span data-ttu-id="e8e4d-137">Hiermee wordt een interactieve foutopsporingssessie gestart met een runs Pace.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-137">Starts an interactive debugging session with a runspace.</span></span>

### [<span data-ttu-id="e8e4d-138">Disable-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="e8e4d-138">Disable-PSBreakpoint</span></span>](Disable-PSBreakpoint.md)
<span data-ttu-id="e8e4d-139">Hiermee schakelt u de onderbrekings punten in de huidige console uit.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-139">Disables the breakpoints in the current console.</span></span>

### [<span data-ttu-id="e8e4d-140">Disable-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="e8e4d-140">Disable-RunspaceDebug</span></span>](Disable-RunspaceDebug.md)
<span data-ttu-id="e8e4d-141">Hiermee schakelt u fout opsporing op een of meer runspaces uit en worden alle in behandeling zijnde debugging stoppen vrijgegeven.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-141">Disables debugging on one or more runspaces, and releases any pending debugger stop.</span></span>

### [<span data-ttu-id="e8e4d-142">Enable-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="e8e4d-142">Enable-PSBreakpoint</span></span>](Enable-PSBreakpoint.md)
<span data-ttu-id="e8e4d-143">Hiermee schakelt u de onderbrekings punten in de huidige console in.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-143">Enables the breakpoints in the current console.</span></span>

### [<span data-ttu-id="e8e4d-144">Enable-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="e8e4d-144">Enable-RunspaceDebug</span></span>](Enable-RunspaceDebug.md)
<span data-ttu-id="e8e4d-145">Hiermee schakelt u fout opsporing in voor runspaces waarbij een onderbrekings punt wordt bewaard totdat er een fout opsporingsprogramma is gekoppeld.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-145">Enables debugging on runspaces where any breakpoint is preserved until a debugger is attached.</span></span>

### [<span data-ttu-id="e8e4d-146">Exporteren-alias</span><span class="sxs-lookup"><span data-stu-id="e8e4d-146">Export-Alias</span></span>](Export-Alias.md)
<span data-ttu-id="e8e4d-147">Exporteert informatie over momenteel gedefinieerde aliassen naar een bestand.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-147">Exports information about currently defined aliases to a file.</span></span>

### [<span data-ttu-id="e8e4d-148">Exporteren-Clixml</span><span class="sxs-lookup"><span data-stu-id="e8e4d-148">Export-Clixml</span></span>](Export-Clixml.md)
<span data-ttu-id="e8e4d-149">Hiermee maakt u een XML-weer gave van een object of objecten en slaat u deze op in een bestand.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-149">Creates an XML-based representation of an object or objects and stores it in a file.</span></span>

### [<span data-ttu-id="e8e4d-150">Exporteren-CSV</span><span class="sxs-lookup"><span data-stu-id="e8e4d-150">Export-Csv</span></span>](Export-Csv.md)
<span data-ttu-id="e8e4d-151">Hiermee worden objecten geconverteerd naar een reeks teken reeksen met door komma's gescheiden waarden (CSV) en worden de teken reeksen opgeslagen in een bestand.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-151">Converts objects into a series of comma-separated value (CSV) strings and saves the strings to a file.</span></span>

### [<span data-ttu-id="e8e4d-152">Exporteren-FormatData</span><span class="sxs-lookup"><span data-stu-id="e8e4d-152">Export-FormatData</span></span>](Export-FormatData.md)
<span data-ttu-id="e8e4d-153">Hiermee slaat u de opmaak gegevens van de huidige sessie op in een opmaak bestand.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-153">Saves formatting data from the current session in a formatting file.</span></span>

### [<span data-ttu-id="e8e4d-154">Exporteren-PSSession</span><span class="sxs-lookup"><span data-stu-id="e8e4d-154">Export-PSSession</span></span>](Export-PSSession.md)
<span data-ttu-id="e8e4d-155">Exporteert opdrachten vanuit een andere sessie en slaat ze op in een Power shell-module.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-155">Exports commands from another session and saves them in a PowerShell module.</span></span>

### [<span data-ttu-id="e8e4d-156">Format-Custom</span><span class="sxs-lookup"><span data-stu-id="e8e4d-156">Format-Custom</span></span>](Format-Custom.md)
<span data-ttu-id="e8e4d-157">Maakt gebruik van een aangepaste weer gave om de uitvoer op te maken.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-157">Uses a customized view to format the output.</span></span>

### [<span data-ttu-id="e8e4d-158">Format-Hex</span><span class="sxs-lookup"><span data-stu-id="e8e4d-158">Format-Hex</span></span>](Format-Hex.md)
<span data-ttu-id="e8e4d-159">Geeft een bestand of andere invoer weer als hexadecimale notatie.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-159">Displays a file or other input as hexadecimal.</span></span>

### [<span data-ttu-id="e8e4d-160">Format-List</span><span class="sxs-lookup"><span data-stu-id="e8e4d-160">Format-List</span></span>](Format-List.md)
<span data-ttu-id="e8e4d-161">Hiermee wordt de uitvoer opgemaakt als een lijst met eigenschappen waarin elke eigenschap op een nieuwe regel wordt weer gegeven.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-161">Formats the output as a list of properties in which each property appears on a new line.</span></span>

### [<span data-ttu-id="e8e4d-162">Format-Table</span><span class="sxs-lookup"><span data-stu-id="e8e4d-162">Format-Table</span></span>](Format-Table.md)
<span data-ttu-id="e8e4d-163">Hiermee wordt de uitvoer als een tabel opgemaakt.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-163">Formats the output as a table.</span></span>

### [<span data-ttu-id="e8e4d-164">Format-Wide</span><span class="sxs-lookup"><span data-stu-id="e8e4d-164">Format-Wide</span></span>](Format-Wide.md)
<span data-ttu-id="e8e4d-165">Maakt objecten op als een brede tabel waarin slechts één eigenschap van elk object wordt weer gegeven.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-165">Formats objects as a wide table that displays only one property of each object.</span></span>

### [<span data-ttu-id="e8e4d-166">Get-alias</span><span class="sxs-lookup"><span data-stu-id="e8e4d-166">Get-Alias</span></span>](Get-Alias.md)
<span data-ttu-id="e8e4d-167">Hiermee worden de aliassen opgehaald voor de huidige sessie.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-167">Gets the aliases for the current session.</span></span>

### [<span data-ttu-id="e8e4d-168">Get-cultuur</span><span class="sxs-lookup"><span data-stu-id="e8e4d-168">Get-Culture</span></span>](Get-Culture.md)
<span data-ttu-id="e8e4d-169">Hiermee wordt de huidige cultuur ingesteld in het besturings systeem.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-169">Gets the current culture set in the operating system.</span></span>

### [<span data-ttu-id="e8e4d-170">Ophalen datum</span><span class="sxs-lookup"><span data-stu-id="e8e4d-170">Get-Date</span></span>](Get-Date.md)
<span data-ttu-id="e8e4d-171">Hiermee worden de huidige datum en tijd opgehaald.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-171">Gets the current date and time.</span></span>

### [<span data-ttu-id="e8e4d-172">Get-Event</span><span class="sxs-lookup"><span data-stu-id="e8e4d-172">Get-Event</span></span>](Get-Event.md)
<span data-ttu-id="e8e4d-173">Hiermee haalt u de gebeurtenissen in de wachtrij van de gebeurtenis op.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-173">Gets the events in the event queue.</span></span>

### [<span data-ttu-id="e8e4d-174">Get-EventSubscriber</span><span class="sxs-lookup"><span data-stu-id="e8e4d-174">Get-EventSubscriber</span></span>](Get-EventSubscriber.md)
<span data-ttu-id="e8e4d-175">Hiermee haalt u de gebeurtenis abonnees op in de huidige sessie.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-175">Gets the event subscribers in the current session.</span></span>

### [<span data-ttu-id="e8e4d-176">Get-FileHash</span><span class="sxs-lookup"><span data-stu-id="e8e4d-176">Get-FileHash</span></span>](Get-FileHash.md)
<span data-ttu-id="e8e4d-177">Hiermee wordt de hash-waarde voor een bestand berekend met behulp van een opgegeven hash-algoritme.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-177">Computes the hash value for a file by using a specified hash algorithm.</span></span>

### [<span data-ttu-id="e8e4d-178">Get-FormatData</span><span class="sxs-lookup"><span data-stu-id="e8e4d-178">Get-FormatData</span></span>](Get-FormatData.md)
<span data-ttu-id="e8e4d-179">Hiermee haalt u de opmaak gegevens op in de huidige sessie.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-179">Gets the formatting data in the current session.</span></span>

### [<span data-ttu-id="e8e4d-180">Get-host</span><span class="sxs-lookup"><span data-stu-id="e8e4d-180">Get-Host</span></span>](Get-Host.md)
<span data-ttu-id="e8e4d-181">Hiermee wordt een object opgehaald dat het huidige host-programma vertegenwoordigt.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-181">Gets an object that represents the current host program.</span></span>

### [<span data-ttu-id="e8e4d-182">Get-member</span><span class="sxs-lookup"><span data-stu-id="e8e4d-182">Get-Member</span></span>](Get-Member.md)
<span data-ttu-id="e8e4d-183">Hiermee worden de eigenschappen en methoden van objecten opgehaald.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-183">Gets the properties and methods of objects.</span></span>

### [<span data-ttu-id="e8e4d-184">Get-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="e8e4d-184">Get-PSBreakpoint</span></span>](Get-PSBreakpoint.md)
<span data-ttu-id="e8e4d-185">Hiermee worden de onderbrekings punten opgehaald die in de huidige sessie zijn ingesteld.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-185">Gets the breakpoints that are set in the current session.</span></span>

### [<span data-ttu-id="e8e4d-186">Get-PSCallStack</span><span class="sxs-lookup"><span data-stu-id="e8e4d-186">Get-PSCallStack</span></span>](Get-PSCallStack.md)
<span data-ttu-id="e8e4d-187">Hiermee wordt de huidige aanroep stack weer gegeven.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-187">Displays the current call stack.</span></span>

### [<span data-ttu-id="e8e4d-188">Ophalen-wille keurig</span><span class="sxs-lookup"><span data-stu-id="e8e4d-188">Get-Random</span></span>](Get-Random.md)
<span data-ttu-id="e8e4d-189">Haalt een wille keurig getal op of selecteert objecten wille keurig van een verzameling.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-189">Gets a random number, or selects objects randomly from a collection.</span></span>

### [<span data-ttu-id="e8e4d-190">Get-runs Pace</span><span class="sxs-lookup"><span data-stu-id="e8e4d-190">Get-Runspace</span></span>](Get-Runspace.md)
<span data-ttu-id="e8e4d-191">Hiermee wordt een actief runspaces binnen een Power shell-hostproces opgehaald.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-191">Gets active runspaces within a PowerShell host process.</span></span>

### [<span data-ttu-id="e8e4d-192">Get-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="e8e4d-192">Get-RunspaceDebug</span></span>](Get-RunspaceDebug.md)
<span data-ttu-id="e8e4d-193">Hiermee worden opties voor fout opsporing in runs weer gegeven.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-193">Shows runspace debugging options.</span></span>

### [<span data-ttu-id="e8e4d-194">Get-TraceSource</span><span class="sxs-lookup"><span data-stu-id="e8e4d-194">Get-TraceSource</span></span>](Get-TraceSource.md)
<span data-ttu-id="e8e4d-195">Hiermee haalt u Power shell-onderdelen op die worden geinstrumenteerd voor tracering.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-195">Gets PowerShell components that are instrumented for tracing.</span></span>

### [<span data-ttu-id="e8e4d-196">Get-TypeData</span><span class="sxs-lookup"><span data-stu-id="e8e4d-196">Get-TypeData</span></span>](Get-TypeData.md)
<span data-ttu-id="e8e4d-197">Hiermee worden de uitgebreide type gegevens in de huidige sessie opgehaald.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-197">Gets the extended type data in the current session.</span></span>

### [<span data-ttu-id="e8e4d-198">Get-UICulture</span><span class="sxs-lookup"><span data-stu-id="e8e4d-198">Get-UICulture</span></span>](Get-UICulture.md)
<span data-ttu-id="e8e4d-199">Hiermee worden de huidige instellingen voor de GEBRUIKERSINTERFACE cultuur in het besturings systeem opgehaald.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-199">Gets the current UI culture settings in the operating system.</span></span>

### [<span data-ttu-id="e8e4d-200">Get-Unique</span><span class="sxs-lookup"><span data-stu-id="e8e4d-200">Get-Unique</span></span>](Get-Unique.md)
<span data-ttu-id="e8e4d-201">Retourneert unieke items uit een gesorteerde lijst.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-201">Returns unique items from a sorted list.</span></span>

### [<span data-ttu-id="e8e4d-202">Get-variabele</span><span class="sxs-lookup"><span data-stu-id="e8e4d-202">Get-Variable</span></span>](Get-Variable.md)
<span data-ttu-id="e8e4d-203">Hiermee worden de variabelen in de huidige console opgehaald.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-203">Gets the variables in the current console.</span></span>

### [<span data-ttu-id="e8e4d-204">Get-term</span><span class="sxs-lookup"><span data-stu-id="e8e4d-204">Get-Verb</span></span>](Get-Verb.md)
<span data-ttu-id="e8e4d-205">Hiermee worden goedgekeurde Power shell-woorden opgehaald.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-205">Gets approved PowerShell verbs.</span></span>

### [<span data-ttu-id="e8e4d-206">Groep-object</span><span class="sxs-lookup"><span data-stu-id="e8e4d-206">Group-Object</span></span>](Group-Object.md)
<span data-ttu-id="e8e4d-207">Groeps objecten die dezelfde waarde voor opgegeven eigenschappen bevatten.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-207">Groups objects that contain the same value for specified properties.</span></span>

### [<span data-ttu-id="e8e4d-208">Import-alias</span><span class="sxs-lookup"><span data-stu-id="e8e4d-208">Import-Alias</span></span>](Import-Alias.md)
<span data-ttu-id="e8e4d-209">Hiermee wordt een alias lijst uit een bestand geïmporteerd.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-209">Imports an alias list from a file.</span></span>

### [<span data-ttu-id="e8e4d-210">Import-Clixml</span><span class="sxs-lookup"><span data-stu-id="e8e4d-210">Import-Clixml</span></span>](Import-Clixml.md)
<span data-ttu-id="e8e4d-211">Hiermee wordt een CLIXML-bestand geïmporteerd en worden de bijbehorende objecten in Power shell gemaakt.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-211">Imports a CLIXML file and creates corresponding objects in PowerShell.</span></span>

### [<span data-ttu-id="e8e4d-212">Import-Csv</span><span class="sxs-lookup"><span data-stu-id="e8e4d-212">Import-Csv</span></span>](Import-Csv.md)
<span data-ttu-id="e8e4d-213">Maakt tabel achtige aangepaste objecten van de items in een bestand met door komma's gescheiden waarden (CSV).</span><span class="sxs-lookup"><span data-stu-id="e8e4d-213">Creates table-like custom objects from the items in a comma-separated value (CSV) file.</span></span>

### [<span data-ttu-id="e8e4d-214">Import-LocalizedData</span><span class="sxs-lookup"><span data-stu-id="e8e4d-214">Import-LocalizedData</span></span>](Import-LocalizedData.md)
<span data-ttu-id="e8e4d-215">Hiermee worden taalspecifieke gegevens in scripts en functies geïmporteerd op basis van de UI-cultuur die is geselecteerd voor het besturings systeem.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-215">Imports language-specific data into scripts and functions based on the UI culture that is selected for the operating system.</span></span>

### [<span data-ttu-id="e8e4d-216">Import-PowerShellDataFile</span><span class="sxs-lookup"><span data-stu-id="e8e4d-216">Import-PowerShellDataFile</span></span>](Import-PowerShellDataFile.md)
<span data-ttu-id="e8e4d-217">Hiermee worden waarden uit een geïmporteerd. PSD1-bestand zonder de inhoud aan te roepen</span><span class="sxs-lookup"><span data-stu-id="e8e4d-217">Imports values from a .PSD1 file without invoking its contents</span></span>

### [<span data-ttu-id="e8e4d-218">Import-PSSession</span><span class="sxs-lookup"><span data-stu-id="e8e4d-218">Import-PSSession</span></span>](Import-PSSession.md)
<span data-ttu-id="e8e4d-219">Importeert opdrachten vanuit een andere sessie in de huidige sessie.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-219">Imports commands from another session into the current session.</span></span>

### [<span data-ttu-id="e8e4d-220">Invoke-expressie</span><span class="sxs-lookup"><span data-stu-id="e8e4d-220">Invoke-Expression</span></span>](Invoke-Expression.md)
<span data-ttu-id="e8e4d-221">Voert opdrachten of expressies uit op de lokale computer.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-221">Runs commands or expressions on the local computer.</span></span>

### [<span data-ttu-id="e8e4d-222">Invoke-RestMethod</span><span class="sxs-lookup"><span data-stu-id="e8e4d-222">Invoke-RestMethod</span></span>](Invoke-RestMethod.md)
<span data-ttu-id="e8e4d-223">Hiermee verzendt u een HTTP-of HTTPS-aanvraag naar een REST webservice.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-223">Sends an HTTP or HTTPS request to a RESTful web service.</span></span>

### [<span data-ttu-id="e8e4d-224">Invoke-WebRequest</span><span class="sxs-lookup"><span data-stu-id="e8e4d-224">Invoke-WebRequest</span></span>](Invoke-WebRequest.md)
<span data-ttu-id="e8e4d-225">Hiermee wordt inhoud opgehaald van een webpagina op internet.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-225">Gets content from a web page on the Internet.</span></span>

### [<span data-ttu-id="e8e4d-226">Measure-Command</span><span class="sxs-lookup"><span data-stu-id="e8e4d-226">Measure-Command</span></span>](Measure-Command.md)
<span data-ttu-id="e8e4d-227">Meet de tijd die nodig is voor het uitvoeren van script blokken en-cmdlets.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-227">Measures the time it takes to run script blocks and cmdlets.</span></span>

### [<span data-ttu-id="e8e4d-228">Meting object</span><span class="sxs-lookup"><span data-stu-id="e8e4d-228">Measure-Object</span></span>](Measure-Object.md)
<span data-ttu-id="e8e4d-229">Hiermee worden de numerieke eigenschappen van objecten en de tekens, woorden en regels in teken reeks objecten, zoals tekst bestanden, berekend.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-229">Calculates the numeric properties of objects, and the characters, words, and lines in string objects, such as files of text.</span></span>

### [<span data-ttu-id="e8e4d-230">Nieuwe alias</span><span class="sxs-lookup"><span data-stu-id="e8e4d-230">New-Alias</span></span>](New-Alias.md)
<span data-ttu-id="e8e4d-231">Hiermee maakt u een nieuwe alias.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-231">Creates a new alias.</span></span>

### [<span data-ttu-id="e8e4d-232">Nieuw-gebeurtenis</span><span class="sxs-lookup"><span data-stu-id="e8e4d-232">New-Event</span></span>](New-Event.md)
<span data-ttu-id="e8e4d-233">Hiermee maakt u een nieuwe gebeurtenis.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-233">Creates a new event.</span></span>

### [<span data-ttu-id="e8e4d-234">Nieuwe GUID</span><span class="sxs-lookup"><span data-stu-id="e8e4d-234">New-Guid</span></span>](New-Guid.md)
<span data-ttu-id="e8e4d-235">Hiermee maakt u een GUID.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-235">Creates a GUID.</span></span>

### [<span data-ttu-id="e8e4d-236">New-Object</span><span class="sxs-lookup"><span data-stu-id="e8e4d-236">New-Object</span></span>](New-Object.md)
<span data-ttu-id="e8e4d-237">Hiermee maakt u een exemplaar van een Microsoft .NET Framework of COM-object.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-237">Creates an instance of a Microsoft .NET Framework or COM object.</span></span>

### [<span data-ttu-id="e8e4d-238">New-TemporaryFile</span><span class="sxs-lookup"><span data-stu-id="e8e4d-238">New-TemporaryFile</span></span>](New-TemporaryFile.md)
<span data-ttu-id="e8e4d-239">Hiermee maakt u een tijdelijk bestand.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-239">Creates a temporary file.</span></span>

### [<span data-ttu-id="e8e4d-240">Nieuw-time span</span><span class="sxs-lookup"><span data-stu-id="e8e4d-240">New-TimeSpan</span></span>](New-TimeSpan.md)
<span data-ttu-id="e8e4d-241">Hiermee maakt u een time span-object.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-241">Creates a TimeSpan object.</span></span>

### [<span data-ttu-id="e8e4d-242">Nieuwe variabele</span><span class="sxs-lookup"><span data-stu-id="e8e4d-242">New-Variable</span></span>](New-Variable.md)
<span data-ttu-id="e8e4d-243">Hiermee maakt u een nieuwe variabele.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-243">Creates a new variable.</span></span>

### [<span data-ttu-id="e8e4d-244">Out-file</span><span class="sxs-lookup"><span data-stu-id="e8e4d-244">Out-File</span></span>](Out-File.md)
<span data-ttu-id="e8e4d-245">Hiermee wordt de uitvoer naar een bestand verzonden.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-245">Sends output to a file.</span></span>

### [<span data-ttu-id="e8e4d-246">Out-GridView</span><span class="sxs-lookup"><span data-stu-id="e8e4d-246">Out-GridView</span></span>](Out-GridView.md)
<span data-ttu-id="e8e4d-247">Hiermee wordt de uitvoer naar een interactieve tabel in een afzonderlijk venster verzonden.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-247">Sends output to an interactive table in a separate window.</span></span>

### [<span data-ttu-id="e8e4d-248">Out-Printer</span><span class="sxs-lookup"><span data-stu-id="e8e4d-248">Out-Printer</span></span>](Out-Printer.md)
<span data-ttu-id="e8e4d-249">Hiermee wordt uitvoer naar een printer verzonden.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-249">Sends output to a printer.</span></span>

### [<span data-ttu-id="e8e4d-250">Out-teken reeks</span><span class="sxs-lookup"><span data-stu-id="e8e4d-250">Out-String</span></span>](Out-String.md)
<span data-ttu-id="e8e4d-251">Voert invoer objecten uit als teken reeksen.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-251">Outputs input objects as a strings.</span></span>

### [<span data-ttu-id="e8e4d-252">Read-host</span><span class="sxs-lookup"><span data-stu-id="e8e4d-252">Read-Host</span></span>](Read-Host.md)
<span data-ttu-id="e8e4d-253">Hiermee wordt een regel invoer uit de-console gelezen.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-253">Reads a line of input from the console.</span></span>

### [<span data-ttu-id="e8e4d-254">REGI ster-EngineEvent</span><span class="sxs-lookup"><span data-stu-id="e8e4d-254">Register-EngineEvent</span></span>](Register-EngineEvent.md)
<span data-ttu-id="e8e4d-255">Abonneren op gebeurtenissen die worden gegenereerd door de Power shell-engine en door de `New-Event` cmdlet.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-255">Subscribes to events that are generated by the PowerShell engine and by the `New-Event` cmdlet.</span></span>

### [<span data-ttu-id="e8e4d-256">REGI ster-ObjectEvent</span><span class="sxs-lookup"><span data-stu-id="e8e4d-256">Register-ObjectEvent</span></span>](Register-ObjectEvent.md)
<span data-ttu-id="e8e4d-257">Abonneer u op de gebeurtenissen die door een Microsoft .NET Framework-object worden gegenereerd.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-257">Subscribes to the events that are generated by a Microsoft .NET Framework object.</span></span>

### [<span data-ttu-id="e8e4d-258">Remove-gebeurtenis</span><span class="sxs-lookup"><span data-stu-id="e8e4d-258">Remove-Event</span></span>](Remove-Event.md)
<span data-ttu-id="e8e4d-259">Hiermee verwijdert u gebeurtenissen uit de wachtrij van de gebeurtenis.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-259">Deletes events from the event queue.</span></span>

### [<span data-ttu-id="e8e4d-260">Remove-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="e8e4d-260">Remove-PSBreakpoint</span></span>](Remove-PSBreakpoint.md)
<span data-ttu-id="e8e4d-261">Hiermee worden onderbrekings punten uit de huidige console verwijderd.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-261">Deletes breakpoints from the current console.</span></span>

### [<span data-ttu-id="e8e4d-262">Remove-TypeData</span><span class="sxs-lookup"><span data-stu-id="e8e4d-262">Remove-TypeData</span></span>](Remove-TypeData.md)
<span data-ttu-id="e8e4d-263">Hiermee verwijdert u uitgebreide typen van de huidige sessie.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-263">Deletes extended types from the current session.</span></span>

### [<span data-ttu-id="e8e4d-264">Remove-variabele</span><span class="sxs-lookup"><span data-stu-id="e8e4d-264">Remove-Variable</span></span>](Remove-Variable.md)
<span data-ttu-id="e8e4d-265">Hiermee verwijdert u een variabele en de bijbehorende waarde.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-265">Deletes a variable and its value.</span></span>

### [<span data-ttu-id="e8e4d-266">Select-Object</span><span class="sxs-lookup"><span data-stu-id="e8e4d-266">Select-Object</span></span>](Select-Object.md)
<span data-ttu-id="e8e4d-267">Objecten of object eigenschappen selecteren.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-267">Selects objects or object properties.</span></span>

### [<span data-ttu-id="e8e4d-268">Selecteer teken reeks</span><span class="sxs-lookup"><span data-stu-id="e8e4d-268">Select-String</span></span>](Select-String.md)
<span data-ttu-id="e8e4d-269">Zoeken naar tekst in teken reeksen en bestanden.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-269">Finds text in strings and files.</span></span>

### [<span data-ttu-id="e8e4d-270">Select-XML</span><span class="sxs-lookup"><span data-stu-id="e8e4d-270">Select-Xml</span></span>](Select-Xml.md)
<span data-ttu-id="e8e4d-271">Zoekt tekst in een XML-teken reeks of-document.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-271">Finds text in an XML string or document.</span></span>

### [<span data-ttu-id="e8e4d-272">Bericht verzenden</span><span class="sxs-lookup"><span data-stu-id="e8e4d-272">Send-MailMessage</span></span>](Send-MailMessage.md)
<span data-ttu-id="e8e4d-273">Hiermee verzendt u een e-mail bericht.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-273">Sends an email message.</span></span>

### [<span data-ttu-id="e8e4d-274">Set-alias</span><span class="sxs-lookup"><span data-stu-id="e8e4d-274">Set-Alias</span></span>](Set-Alias.md)
<span data-ttu-id="e8e4d-275">Hiermee maakt of wijzigt u een alias voor een cmdlet of een andere opdracht in de huidige Power shell-sessie.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-275">Creates or changes an alias for a cmdlet or other command in the current PowerShell session.</span></span>

### [<span data-ttu-id="e8e4d-276">Set-date</span><span class="sxs-lookup"><span data-stu-id="e8e4d-276">Set-Date</span></span>](Set-Date.md)
<span data-ttu-id="e8e4d-277">Hiermee wijzigt u de systeem tijd op de computer naar een tijd die u opgeeft.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-277">Changes the system time on the computer to a time that you specify.</span></span>

### [<span data-ttu-id="e8e4d-278">Set-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="e8e4d-278">Set-PSBreakpoint</span></span>](Set-PSBreakpoint.md)
<span data-ttu-id="e8e4d-279">Hiermee stelt u een onderbrekings punt in voor een regel, opdracht of variabele.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-279">Sets a breakpoint on a line, command, or variable.</span></span>

### [<span data-ttu-id="e8e4d-280">Set-TraceSource</span><span class="sxs-lookup"><span data-stu-id="e8e4d-280">Set-TraceSource</span></span>](Set-TraceSource.md)
<span data-ttu-id="e8e4d-281">Hiermee configureert, start en stopt u het traceren van Power shell-onderdelen.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-281">Configures, starts, and stops a trace of PowerShell components.</span></span>

### [<span data-ttu-id="e8e4d-282">Set-variabele</span><span class="sxs-lookup"><span data-stu-id="e8e4d-282">Set-Variable</span></span>](Set-Variable.md)
<span data-ttu-id="e8e4d-283">Hiermee stelt u de waarde van een variabele.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-283">Sets the value of a variable.</span></span>

### [<span data-ttu-id="e8e4d-284">Weer geven-opdracht</span><span class="sxs-lookup"><span data-stu-id="e8e4d-284">Show-Command</span></span>](Show-Command.md)
<span data-ttu-id="e8e4d-285">Hiermee worden de Power shell-opdracht gegevens in een grafisch venster weer gegeven.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-285">Displays PowerShell command information in a graphical window.</span></span>

### [<span data-ttu-id="e8e4d-286">Sorteer object</span><span class="sxs-lookup"><span data-stu-id="e8e4d-286">Sort-Object</span></span>](Sort-Object.md)
<span data-ttu-id="e8e4d-287">Objecten sorteren op eigenschaps waarden.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-287">Sorts objects by property values.</span></span>

### [<span data-ttu-id="e8e4d-288">Start-slaap stand</span><span class="sxs-lookup"><span data-stu-id="e8e4d-288">Start-Sleep</span></span>](Start-Sleep.md)
<span data-ttu-id="e8e4d-289">Hiermee wordt de activiteit in een script of sessie onderbroken gedurende de opgegeven periode.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-289">Suspends the activity in a script or session for the specified period of time.</span></span>

### [<span data-ttu-id="e8e4d-290">T-object</span><span class="sxs-lookup"><span data-stu-id="e8e4d-290">Tee-Object</span></span>](Tee-Object.md)
<span data-ttu-id="e8e4d-291">Slaat de uitvoer van de opdracht op in een bestand of variabele, en verzendt deze ook naar de pijp lijn.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-291">Saves command output in a file or variable and also sends it down the pipeline.</span></span>

### [<span data-ttu-id="e8e4d-292">Tracering-opdracht</span><span class="sxs-lookup"><span data-stu-id="e8e4d-292">Trace-Command</span></span>](Trace-Command.md)
<span data-ttu-id="e8e4d-293">Hiermee wordt een tracering van de opgegeven expressie of opdracht geconfigureerd en gestart.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-293">Configures and starts a trace of the specified expression or command.</span></span>

### [<span data-ttu-id="e8e4d-294">Blok kering van bestand opheffen</span><span class="sxs-lookup"><span data-stu-id="e8e4d-294">Unblock-File</span></span>](Unblock-File.md)
<span data-ttu-id="e8e4d-295">De blok kering van bestanden die zijn gedownload van het internet.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-295">Unblocks files that were downloaded from the Internet.</span></span>

### [<span data-ttu-id="e8e4d-296">Registratie ongedaan maken-gebeurtenis</span><span class="sxs-lookup"><span data-stu-id="e8e4d-296">Unregister-Event</span></span>](Unregister-Event.md)
<span data-ttu-id="e8e4d-297">Hiermee wordt een gebeurtenis abonnement geannuleerd.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-297">Cancels an event subscription.</span></span>

### [<span data-ttu-id="e8e4d-298">Update-FormatData</span><span class="sxs-lookup"><span data-stu-id="e8e4d-298">Update-FormatData</span></span>](Update-FormatData.md)
<span data-ttu-id="e8e4d-299">Hiermee werkt u de opmaak gegevens in de huidige sessie bij.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-299">Updates the formatting data in the current session.</span></span>

### [<span data-ttu-id="e8e4d-300">Update-List</span><span class="sxs-lookup"><span data-stu-id="e8e4d-300">Update-List</span></span>](Update-List.md)
<span data-ttu-id="e8e4d-301">Hiermee worden items toegevoegd aan en verwijderd uit een eigenschaps waarde die een verzameling objecten bevat.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-301">Adds items to and removes items from a property value that contains a collection of objects.</span></span>

### [<span data-ttu-id="e8e4d-302">Update-TypeData</span><span class="sxs-lookup"><span data-stu-id="e8e4d-302">Update-TypeData</span></span>](Update-TypeData.md)
<span data-ttu-id="e8e4d-303">Hiermee werkt u de uitgebreide type gegevens in de sessie bij.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-303">Updates the extended type data in the session.</span></span>

### [<span data-ttu-id="e8e4d-304">Wacht debugger</span><span class="sxs-lookup"><span data-stu-id="e8e4d-304">Wait-Debugger</span></span>](Wait-Debugger.md)
<span data-ttu-id="e8e4d-305">Stopt een script in het fout opsporingsprogramma voordat de volgende instructie in het script wordt uitgevoerd.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-305">Stops a script in the debugger before running the next statement in the script.</span></span>

### [<span data-ttu-id="e8e4d-306">Wachten gebeurtenis</span><span class="sxs-lookup"><span data-stu-id="e8e4d-306">Wait-Event</span></span>](Wait-Event.md)
<span data-ttu-id="e8e4d-307">Er wordt gewacht tot een bepaalde gebeurtenis is opgetreden voordat de uitvoering wordt voortgezet.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-307">Waits until a particular event is raised before continuing to run.</span></span>

### [<span data-ttu-id="e8e4d-308">Schrijf fouten opsporen</span><span class="sxs-lookup"><span data-stu-id="e8e4d-308">Write-Debug</span></span>](Write-Debug.md)
<span data-ttu-id="e8e4d-309">Schrijft een debug-bericht naar de-console.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-309">Writes a debug message to the console.</span></span>

### [<span data-ttu-id="e8e4d-310">Schrijf fout</span><span class="sxs-lookup"><span data-stu-id="e8e4d-310">Write-Error</span></span>](Write-Error.md)
<span data-ttu-id="e8e4d-311">Schrijft een object naar de fout stroom.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-311">Writes an object to the error stream.</span></span>

### [<span data-ttu-id="e8e4d-312">Write-host</span><span class="sxs-lookup"><span data-stu-id="e8e4d-312">Write-Host</span></span>](Write-Host.md)
<span data-ttu-id="e8e4d-313">Hiermee wordt de aangepaste uitvoer naar een host geschreven.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-313">Writes customized output to a host.</span></span>

### [<span data-ttu-id="e8e4d-314">Write-Information</span><span class="sxs-lookup"><span data-stu-id="e8e4d-314">Write-Information</span></span>](Write-Information.md)
<span data-ttu-id="e8e4d-315">Hiermee geeft u op hoe Power shell gegevens streamen voor een opdracht verwerkt.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-315">Specifies how PowerShell handles information stream data for a command.</span></span>

### [<span data-ttu-id="e8e4d-316">Write-output</span><span class="sxs-lookup"><span data-stu-id="e8e4d-316">Write-Output</span></span>](Write-Output.md)
<span data-ttu-id="e8e4d-317">Hiermee worden de opgegeven objecten verzonden naar de volgende opdracht in de pijp lijn.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-317">Sends the specified objects to the next command in the pipeline.</span></span>

### [<span data-ttu-id="e8e4d-318">Schrijf voortgang</span><span class="sxs-lookup"><span data-stu-id="e8e4d-318">Write-Progress</span></span>](Write-Progress.md)
<span data-ttu-id="e8e4d-319">Hiermee wordt een voortgangs balk binnen een Power shell-opdracht venster weer gegeven.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-319">Displays a progress bar within a PowerShell command window.</span></span>

### [<span data-ttu-id="e8e4d-320">Write-verbose</span><span class="sxs-lookup"><span data-stu-id="e8e4d-320">Write-Verbose</span></span>](Write-Verbose.md)
<span data-ttu-id="e8e4d-321">Schrijft tekst naar de uitgebreide berichten stroom.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-321">Writes text to the verbose message stream.</span></span>

### [<span data-ttu-id="e8e4d-322">Waarschuwing voor schrijven</span><span class="sxs-lookup"><span data-stu-id="e8e4d-322">Write-Warning</span></span>](Write-Warning.md)
<span data-ttu-id="e8e4d-323">Hiermee schrijft u een waarschuwings bericht.</span><span class="sxs-lookup"><span data-stu-id="e8e4d-323">Writes a warning message.</span></span>
