reference/7.0/Microsoft.PowerShell.Utility/Microsoft.PowerShell.Utility.md
---
Download Help Link: https://go.microsoft.com/fwlink/?linkid=2113633
Help Version: 7.0.1.0
keywords: powershell,cmdlet
Locale: en-US
Module Guid: 1da87e53-152b-403e-98dc-74d7b4d63d59
Module Name: Microsoft.PowerShell.Utility
ms.date: 06/09/2017
schema: 2.0.0
title: Microsoft.PowerShell.Utility
ms.openlocfilehash: 6afa678e516ca3f3f6af5be87d2bb7eea628fcf5
ms.sourcegitcommit: 9d95532afe81c235c8094eae28ab84b2f77f8c48
ms.translationtype: MT
ms.contentlocale: nl-NL
ms.lasthandoff: 10/07/2020
ms.locfileid: "93252030"
---
# <span data-ttu-id="b3d14-103">Module micro soft. Power shell. Utility</span><span class="sxs-lookup"><span data-stu-id="b3d14-103">Microsoft.PowerShell.Utility Module</span></span>

## <span data-ttu-id="b3d14-104">Beschrijving</span><span class="sxs-lookup"><span data-stu-id="b3d14-104">Description</span></span>

<span data-ttu-id="b3d14-105">Deze sectie bevat de Help-onderwerpen voor de cmdlets die worden geïnstalleerd met de module micro soft. Power shell. Utility.</span><span class="sxs-lookup"><span data-stu-id="b3d14-105">This section contains the help topics for the cmdlets that are installed with the Microsoft.PowerShell.Utility module.</span></span> <span data-ttu-id="b3d14-106">Deze module bevat cmdlets voor het beheren van de basis functies van Power shell.</span><span class="sxs-lookup"><span data-stu-id="b3d14-106">This module contains cmdlets that manage the basic features of PowerShell.</span></span>

## <span data-ttu-id="b3d14-107">Micro soft. Power shell. Utility-cmdlets</span><span class="sxs-lookup"><span data-stu-id="b3d14-107">Microsoft.PowerShell.Utility Cmdlets</span></span>

### [<span data-ttu-id="b3d14-108">Lid toevoegen</span><span class="sxs-lookup"><span data-stu-id="b3d14-108">Add-Member</span></span>](Add-Member.md)
<span data-ttu-id="b3d14-109">Hiermee voegt u aangepaste eigenschappen en methoden toe aan een exemplaar van een Power shell-object.</span><span class="sxs-lookup"><span data-stu-id="b3d14-109">Adds custom properties and methods to an instance of a PowerShell object.</span></span>

### [<span data-ttu-id="b3d14-110">Add-type</span><span class="sxs-lookup"><span data-stu-id="b3d14-110">Add-Type</span></span>](Add-Type.md)
<span data-ttu-id="b3d14-111">Hiermee voegt u een Microsoft .NET kern klasse toe aan een Power shell-sessie.</span><span class="sxs-lookup"><span data-stu-id="b3d14-111">Adds a Microsoft .NET Core class to a PowerShell session.</span></span>

### [<span data-ttu-id="b3d14-112">Clear-variabele</span><span class="sxs-lookup"><span data-stu-id="b3d14-112">Clear-Variable</span></span>](Clear-Variable.md)
<span data-ttu-id="b3d14-113">Hiermee verwijdert u de waarde van een variabele.</span><span class="sxs-lookup"><span data-stu-id="b3d14-113">Deletes the value of a variable.</span></span>

### [<span data-ttu-id="b3d14-114">Compare-object</span><span class="sxs-lookup"><span data-stu-id="b3d14-114">Compare-Object</span></span>](Compare-Object.md)
<span data-ttu-id="b3d14-115">Vergelijkt twee sets met objecten.</span><span class="sxs-lookup"><span data-stu-id="b3d14-115">Compares two sets of objects.</span></span>

### [<span data-ttu-id="b3d14-116">ConvertFrom-CSV</span><span class="sxs-lookup"><span data-stu-id="b3d14-116">ConvertFrom-Csv</span></span>](ConvertFrom-Csv.md)
<span data-ttu-id="b3d14-117">Converteert object eigenschappen in CSV-indeling (door komma's gescheiden waarden) naar CSV-versies van de oorspronkelijke objecten.</span><span class="sxs-lookup"><span data-stu-id="b3d14-117">Converts object properties in comma-separated value (CSV) format into CSV versions of the original objects.</span></span>

### [<span data-ttu-id="b3d14-118">ConvertFrom-JSON</span><span class="sxs-lookup"><span data-stu-id="b3d14-118">ConvertFrom-Json</span></span>](ConvertFrom-Json.md)
<span data-ttu-id="b3d14-119">Converteert een teken reeks in JSON-indeling naar een aangepast object of een hash-tabel.</span><span class="sxs-lookup"><span data-stu-id="b3d14-119">Converts a JSON-formatted string to a custom object or a hash table.</span></span>

### [<span data-ttu-id="b3d14-120">ConvertFrom-prijs verlaging</span><span class="sxs-lookup"><span data-stu-id="b3d14-120">ConvertFrom-Markdown</span></span>](ConvertFrom-Markdown.md)
<span data-ttu-id="b3d14-121">De inhoud van een teken reeks of een bestand converteren naar een **MarkdownInfo** -object.</span><span class="sxs-lookup"><span data-stu-id="b3d14-121">Convert the contents of a string or a file to a **MarkdownInfo** object.</span></span>

### [<span data-ttu-id="b3d14-122">ConvertFrom-SddlString</span><span class="sxs-lookup"><span data-stu-id="b3d14-122">ConvertFrom-SddlString</span></span>](ConvertFrom-SddlString.md)
<span data-ttu-id="b3d14-123">Hiermee wordt een SDDL-teken reeks geconverteerd naar een aangepast object.</span><span class="sxs-lookup"><span data-stu-id="b3d14-123">Converts a SDDL string to a custom object.</span></span>

### [<span data-ttu-id="b3d14-124">ConvertFrom-StringData</span><span class="sxs-lookup"><span data-stu-id="b3d14-124">ConvertFrom-StringData</span></span>](ConvertFrom-StringData.md)
<span data-ttu-id="b3d14-125">Hiermee wordt een teken reeks met een of meer sleutel-en waardeparen geconverteerd naar een hash-tabel.</span><span class="sxs-lookup"><span data-stu-id="b3d14-125">Converts a string containing one or more key and value pairs to a hash table.</span></span>

### [<span data-ttu-id="b3d14-126">ConvertTo-Csv</span><span class="sxs-lookup"><span data-stu-id="b3d14-126">ConvertTo-Csv</span></span>](ConvertTo-Csv.md)
<span data-ttu-id="b3d14-127">Hiermee converteert u .NET-objecten naar een reeks teken reeksen met tekens gescheiden waarden (CSV).</span><span class="sxs-lookup"><span data-stu-id="b3d14-127">Converts .NET objects into a series of character-separated value (CSV) strings.</span></span>

### [<span data-ttu-id="b3d14-128">ConvertTo-Html</span><span class="sxs-lookup"><span data-stu-id="b3d14-128">ConvertTo-Html</span></span>](ConvertTo-Html.md)
<span data-ttu-id="b3d14-129">Hiermee converteert u .NET-objecten naar HTML die kunnen worden weer gegeven in een webbrowser.</span><span class="sxs-lookup"><span data-stu-id="b3d14-129">Converts .NET objects into HTML that can be displayed in a Web browser.</span></span>

### [<span data-ttu-id="b3d14-130">ConvertTo-Json</span><span class="sxs-lookup"><span data-stu-id="b3d14-130">ConvertTo-Json</span></span>](ConvertTo-Json.md)
<span data-ttu-id="b3d14-131">Converteert een object naar een teken reeks in JSON-indeling.</span><span class="sxs-lookup"><span data-stu-id="b3d14-131">Converts an object to a JSON-formatted string.</span></span>

### [<span data-ttu-id="b3d14-132">ConvertTo-Xml</span><span class="sxs-lookup"><span data-stu-id="b3d14-132">ConvertTo-Xml</span></span>](ConvertTo-Xml.md)
<span data-ttu-id="b3d14-133">Hiermee maakt u een XML-weer gave van een object.</span><span class="sxs-lookup"><span data-stu-id="b3d14-133">Creates an XML-based representation of an object.</span></span>

### [<span data-ttu-id="b3d14-134">Fout opsporing-runs Pace</span><span class="sxs-lookup"><span data-stu-id="b3d14-134">Debug-Runspace</span></span>](Debug-Runspace.md)
<span data-ttu-id="b3d14-135">Hiermee wordt een interactieve foutopsporingssessie gestart met een runs Pace.</span><span class="sxs-lookup"><span data-stu-id="b3d14-135">Starts an interactive debugging session with a runspace.</span></span>

### [<span data-ttu-id="b3d14-136">Disable-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="b3d14-136">Disable-PSBreakpoint</span></span>](Disable-PSBreakpoint.md)
<span data-ttu-id="b3d14-137">Hiermee schakelt u de onderbrekings punten in de huidige console uit.</span><span class="sxs-lookup"><span data-stu-id="b3d14-137">Disables the breakpoints in the current console.</span></span>

### [<span data-ttu-id="b3d14-138">Disable-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="b3d14-138">Disable-RunspaceDebug</span></span>](Disable-RunspaceDebug.md)
<span data-ttu-id="b3d14-139">Hiermee schakelt u fout opsporing op een of meer runspaces uit en worden alle in behandeling zijnde debugging stoppen vrijgegeven.</span><span class="sxs-lookup"><span data-stu-id="b3d14-139">Disables debugging on one or more runspaces, and releases any pending debugger stop.</span></span>

### [<span data-ttu-id="b3d14-140">Enable-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="b3d14-140">Enable-PSBreakpoint</span></span>](Enable-PSBreakpoint.md)
<span data-ttu-id="b3d14-141">Hiermee schakelt u de onderbrekings punten in de huidige console in.</span><span class="sxs-lookup"><span data-stu-id="b3d14-141">Enables the breakpoints in the current console.</span></span>

### [<span data-ttu-id="b3d14-142">Enable-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="b3d14-142">Enable-RunspaceDebug</span></span>](Enable-RunspaceDebug.md)
<span data-ttu-id="b3d14-143">Hiermee schakelt u fout opsporing in voor runspaces waarbij een onderbrekings punt wordt bewaard totdat er een fout opsporingsprogramma is gekoppeld.</span><span class="sxs-lookup"><span data-stu-id="b3d14-143">Enables debugging on runspaces where any breakpoint is preserved until a debugger is attached.</span></span>

### [<span data-ttu-id="b3d14-144">Exporteren-alias</span><span class="sxs-lookup"><span data-stu-id="b3d14-144">Export-Alias</span></span>](Export-Alias.md)
<span data-ttu-id="b3d14-145">Exporteert informatie over momenteel gedefinieerde aliassen naar een bestand.</span><span class="sxs-lookup"><span data-stu-id="b3d14-145">Exports information about currently defined aliases to a file.</span></span>

### [<span data-ttu-id="b3d14-146">Exporteren-Clixml</span><span class="sxs-lookup"><span data-stu-id="b3d14-146">Export-Clixml</span></span>](Export-Clixml.md)
<span data-ttu-id="b3d14-147">Hiermee maakt u een XML-weer gave van een object of objecten en slaat u deze op in een bestand.</span><span class="sxs-lookup"><span data-stu-id="b3d14-147">Creates an XML-based representation of an object or objects and stores it in a file.</span></span>

### [<span data-ttu-id="b3d14-148">Exporteren-CSV</span><span class="sxs-lookup"><span data-stu-id="b3d14-148">Export-Csv</span></span>](Export-Csv.md)
<span data-ttu-id="b3d14-149">Hiermee worden objecten geconverteerd naar een reeks teken reeksen met door komma's gescheiden waarden (CSV) en worden de teken reeksen opgeslagen in een bestand.</span><span class="sxs-lookup"><span data-stu-id="b3d14-149">Converts objects into a series of comma-separated value (CSV) strings and saves the strings to a file.</span></span>

### [<span data-ttu-id="b3d14-150">Exporteren-FormatData</span><span class="sxs-lookup"><span data-stu-id="b3d14-150">Export-FormatData</span></span>](Export-FormatData.md)
<span data-ttu-id="b3d14-151">Hiermee slaat u de opmaak gegevens van de huidige sessie op in een opmaak bestand.</span><span class="sxs-lookup"><span data-stu-id="b3d14-151">Saves formatting data from the current session in a formatting file.</span></span>

### [<span data-ttu-id="b3d14-152">Exporteren-PSSession</span><span class="sxs-lookup"><span data-stu-id="b3d14-152">Export-PSSession</span></span>](Export-PSSession.md)
<span data-ttu-id="b3d14-153">Exporteert opdrachten vanuit een andere sessie en slaat ze op in een Power shell-module.</span><span class="sxs-lookup"><span data-stu-id="b3d14-153">Exports commands from another session and saves them in a PowerShell module.</span></span>

### [<span data-ttu-id="b3d14-154">Format-Custom</span><span class="sxs-lookup"><span data-stu-id="b3d14-154">Format-Custom</span></span>](Format-Custom.md)
<span data-ttu-id="b3d14-155">Maakt gebruik van een aangepaste weer gave om de uitvoer op te maken.</span><span class="sxs-lookup"><span data-stu-id="b3d14-155">Uses a customized view to format the output.</span></span>

### [<span data-ttu-id="b3d14-156">Format-Hex</span><span class="sxs-lookup"><span data-stu-id="b3d14-156">Format-Hex</span></span>](Format-Hex.md)
<span data-ttu-id="b3d14-157">Geeft een bestand of andere invoer weer als hexadecimale notatie.</span><span class="sxs-lookup"><span data-stu-id="b3d14-157">Displays a file or other input as hexadecimal.</span></span>

### [<span data-ttu-id="b3d14-158">Format-List</span><span class="sxs-lookup"><span data-stu-id="b3d14-158">Format-List</span></span>](Format-List.md)
<span data-ttu-id="b3d14-159">Hiermee wordt de uitvoer opgemaakt als een lijst met eigenschappen waarin elke eigenschap op een nieuwe regel wordt weer gegeven.</span><span class="sxs-lookup"><span data-stu-id="b3d14-159">Formats the output as a list of properties in which each property appears on a new line.</span></span>

### [<span data-ttu-id="b3d14-160">Format-Table</span><span class="sxs-lookup"><span data-stu-id="b3d14-160">Format-Table</span></span>](Format-Table.md)
<span data-ttu-id="b3d14-161">Hiermee wordt de uitvoer als een tabel opgemaakt.</span><span class="sxs-lookup"><span data-stu-id="b3d14-161">Formats the output as a table.</span></span>

### [<span data-ttu-id="b3d14-162">Format-Wide</span><span class="sxs-lookup"><span data-stu-id="b3d14-162">Format-Wide</span></span>](Format-Wide.md)
<span data-ttu-id="b3d14-163">Maakt objecten op als een brede tabel waarin slechts één eigenschap van elk object wordt weer gegeven.</span><span class="sxs-lookup"><span data-stu-id="b3d14-163">Formats objects as a wide table that displays only one property of each object.</span></span>

### [<span data-ttu-id="b3d14-164">Get-alias</span><span class="sxs-lookup"><span data-stu-id="b3d14-164">Get-Alias</span></span>](Get-Alias.md)
<span data-ttu-id="b3d14-165">Hiermee worden de aliassen opgehaald voor de huidige sessie.</span><span class="sxs-lookup"><span data-stu-id="b3d14-165">Gets the aliases for the current session.</span></span>

### [<span data-ttu-id="b3d14-166">Get-cultuur</span><span class="sxs-lookup"><span data-stu-id="b3d14-166">Get-Culture</span></span>](Get-Culture.md)
<span data-ttu-id="b3d14-167">Hiermee wordt de huidige cultuur ingesteld in het besturings systeem.</span><span class="sxs-lookup"><span data-stu-id="b3d14-167">Gets the current culture set in the operating system.</span></span>

### [<span data-ttu-id="b3d14-168">Ophalen datum</span><span class="sxs-lookup"><span data-stu-id="b3d14-168">Get-Date</span></span>](Get-Date.md)
<span data-ttu-id="b3d14-169">Hiermee worden de huidige datum en tijd opgehaald.</span><span class="sxs-lookup"><span data-stu-id="b3d14-169">Gets the current date and time.</span></span>

### [<span data-ttu-id="b3d14-170">Get-fout</span><span class="sxs-lookup"><span data-stu-id="b3d14-170">Get-Error</span></span>](Get-Error.md)
<span data-ttu-id="b3d14-171">Hiermee worden de meest recente fout berichten uit de huidige sessie opgehaald en weer gegeven.</span><span class="sxs-lookup"><span data-stu-id="b3d14-171">Gets and displays the most recent error messages from the current session.</span></span>

### [<span data-ttu-id="b3d14-172">Get-Event</span><span class="sxs-lookup"><span data-stu-id="b3d14-172">Get-Event</span></span>](Get-Event.md)
<span data-ttu-id="b3d14-173">Hiermee haalt u de gebeurtenissen in de wachtrij van de gebeurtenis op.</span><span class="sxs-lookup"><span data-stu-id="b3d14-173">Gets the events in the event queue.</span></span>

### [<span data-ttu-id="b3d14-174">Get-EventSubscriber</span><span class="sxs-lookup"><span data-stu-id="b3d14-174">Get-EventSubscriber</span></span>](Get-EventSubscriber.md)
<span data-ttu-id="b3d14-175">Hiermee haalt u de gebeurtenis abonnees op in de huidige sessie.</span><span class="sxs-lookup"><span data-stu-id="b3d14-175">Gets the event subscribers in the current session.</span></span>

### [<span data-ttu-id="b3d14-176">Get-FileHash</span><span class="sxs-lookup"><span data-stu-id="b3d14-176">Get-FileHash</span></span>](Get-FileHash.md)
<span data-ttu-id="b3d14-177">Hiermee wordt de hash-waarde voor een bestand berekend met behulp van een opgegeven hash-algoritme.</span><span class="sxs-lookup"><span data-stu-id="b3d14-177">Computes the hash value for a file by using a specified hash algorithm.</span></span>

### [<span data-ttu-id="b3d14-178">Get-FormatData</span><span class="sxs-lookup"><span data-stu-id="b3d14-178">Get-FormatData</span></span>](Get-FormatData.md)
<span data-ttu-id="b3d14-179">Hiermee haalt u de opmaak gegevens op in de huidige sessie.</span><span class="sxs-lookup"><span data-stu-id="b3d14-179">Gets the formatting data in the current session.</span></span>

### [<span data-ttu-id="b3d14-180">Get-host</span><span class="sxs-lookup"><span data-stu-id="b3d14-180">Get-Host</span></span>](Get-Host.md)
<span data-ttu-id="b3d14-181">Hiermee wordt een object opgehaald dat het huidige host-programma vertegenwoordigt.</span><span class="sxs-lookup"><span data-stu-id="b3d14-181">Gets an object that represents the current host program.</span></span>

### [<span data-ttu-id="b3d14-182">Get-MarkdownOption</span><span class="sxs-lookup"><span data-stu-id="b3d14-182">Get-MarkdownOption</span></span>](Get-MarkdownOption.md)
<span data-ttu-id="b3d14-183">Retourneert de huidige kleuren en stijlen die worden gebruikt voor het weer geven van de inhoud van de korting op de-console.</span><span class="sxs-lookup"><span data-stu-id="b3d14-183">Returns the current colors and styles used for rendering Markdown content in the console.</span></span>

### [<span data-ttu-id="b3d14-184">Get-member</span><span class="sxs-lookup"><span data-stu-id="b3d14-184">Get-Member</span></span>](Get-Member.md)
<span data-ttu-id="b3d14-185">Hiermee worden de eigenschappen en methoden van objecten opgehaald.</span><span class="sxs-lookup"><span data-stu-id="b3d14-185">Gets the properties and methods of objects.</span></span>

### [<span data-ttu-id="b3d14-186">Get-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="b3d14-186">Get-PSBreakpoint</span></span>](Get-PSBreakpoint.md)
<span data-ttu-id="b3d14-187">Hiermee worden de onderbrekings punten opgehaald die in de huidige sessie zijn ingesteld.</span><span class="sxs-lookup"><span data-stu-id="b3d14-187">Gets the breakpoints that are set in the current session.</span></span>

### [<span data-ttu-id="b3d14-188">Get-PSCallStack</span><span class="sxs-lookup"><span data-stu-id="b3d14-188">Get-PSCallStack</span></span>](Get-PSCallStack.md)
<span data-ttu-id="b3d14-189">Hiermee wordt de huidige aanroep stack weer gegeven.</span><span class="sxs-lookup"><span data-stu-id="b3d14-189">Displays the current call stack.</span></span>

### [<span data-ttu-id="b3d14-190">Ophalen-wille keurig</span><span class="sxs-lookup"><span data-stu-id="b3d14-190">Get-Random</span></span>](Get-Random.md)
<span data-ttu-id="b3d14-191">Haalt een wille keurig getal op of selecteert objecten wille keurig van een verzameling.</span><span class="sxs-lookup"><span data-stu-id="b3d14-191">Gets a random number, or selects objects randomly from a collection.</span></span>

### [<span data-ttu-id="b3d14-192">Get-runs Pace</span><span class="sxs-lookup"><span data-stu-id="b3d14-192">Get-Runspace</span></span>](Get-Runspace.md)
<span data-ttu-id="b3d14-193">Hiermee wordt een actief runspaces binnen een Power shell-hostproces opgehaald.</span><span class="sxs-lookup"><span data-stu-id="b3d14-193">Gets active runspaces within a PowerShell host process.</span></span>

### [<span data-ttu-id="b3d14-194">Get-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="b3d14-194">Get-RunspaceDebug</span></span>](Get-RunspaceDebug.md)
<span data-ttu-id="b3d14-195">Hiermee worden opties voor fout opsporing in runs weer gegeven.</span><span class="sxs-lookup"><span data-stu-id="b3d14-195">Shows runspace debugging options.</span></span>

### [<span data-ttu-id="b3d14-196">Get-TraceSource</span><span class="sxs-lookup"><span data-stu-id="b3d14-196">Get-TraceSource</span></span>](Get-TraceSource.md)
<span data-ttu-id="b3d14-197">Hiermee haalt u Power shell-onderdelen op die worden geinstrumenteerd voor tracering.</span><span class="sxs-lookup"><span data-stu-id="b3d14-197">Gets PowerShell components that are instrumented for tracing.</span></span>

### [<span data-ttu-id="b3d14-198">Get-TypeData</span><span class="sxs-lookup"><span data-stu-id="b3d14-198">Get-TypeData</span></span>](Get-TypeData.md)
<span data-ttu-id="b3d14-199">Hiermee worden de uitgebreide type gegevens in de huidige sessie opgehaald.</span><span class="sxs-lookup"><span data-stu-id="b3d14-199">Gets the extended type data in the current session.</span></span>

### [<span data-ttu-id="b3d14-200">Get-UICulture</span><span class="sxs-lookup"><span data-stu-id="b3d14-200">Get-UICulture</span></span>](Get-UICulture.md)
<span data-ttu-id="b3d14-201">Hiermee worden de huidige instellingen voor de GEBRUIKERSINTERFACE cultuur in het besturings systeem opgehaald.</span><span class="sxs-lookup"><span data-stu-id="b3d14-201">Gets the current UI culture settings in the operating system.</span></span>

### [<span data-ttu-id="b3d14-202">Get-Unique</span><span class="sxs-lookup"><span data-stu-id="b3d14-202">Get-Unique</span></span>](Get-Unique.md)
<span data-ttu-id="b3d14-203">Retourneert unieke items uit een gesorteerde lijst.</span><span class="sxs-lookup"><span data-stu-id="b3d14-203">Returns unique items from a sorted list.</span></span>

### [<span data-ttu-id="b3d14-204">Get-uptime</span><span class="sxs-lookup"><span data-stu-id="b3d14-204">Get-Uptime</span></span>](Get-Uptime.md)
<span data-ttu-id="b3d14-205">Haal de **tijds duur** op sinds de laatste keer dat deze is opgestart.</span><span class="sxs-lookup"><span data-stu-id="b3d14-205">Get the **TimeSpan** since last boot.</span></span>

### [<span data-ttu-id="b3d14-206">Get-variabele</span><span class="sxs-lookup"><span data-stu-id="b3d14-206">Get-Variable</span></span>](Get-Variable.md)
<span data-ttu-id="b3d14-207">Hiermee worden de variabelen in de huidige console opgehaald.</span><span class="sxs-lookup"><span data-stu-id="b3d14-207">Gets the variables in the current console.</span></span>

### [<span data-ttu-id="b3d14-208">Get-term</span><span class="sxs-lookup"><span data-stu-id="b3d14-208">Get-Verb</span></span>](Get-Verb.md)
<span data-ttu-id="b3d14-209">Hiermee worden goedgekeurde Power shell-woorden opgehaald.</span><span class="sxs-lookup"><span data-stu-id="b3d14-209">Gets approved PowerShell verbs.</span></span>

### [<span data-ttu-id="b3d14-210">Groep-object</span><span class="sxs-lookup"><span data-stu-id="b3d14-210">Group-Object</span></span>](Group-Object.md)
<span data-ttu-id="b3d14-211">Groeps objecten die dezelfde waarde voor opgegeven eigenschappen bevatten.</span><span class="sxs-lookup"><span data-stu-id="b3d14-211">Groups objects that contain the same value for specified properties.</span></span>

### [<span data-ttu-id="b3d14-212">Import-alias</span><span class="sxs-lookup"><span data-stu-id="b3d14-212">Import-Alias</span></span>](Import-Alias.md)
<span data-ttu-id="b3d14-213">Hiermee wordt een alias lijst uit een bestand geïmporteerd.</span><span class="sxs-lookup"><span data-stu-id="b3d14-213">Imports an alias list from a file.</span></span>

### [<span data-ttu-id="b3d14-214">Import-Clixml</span><span class="sxs-lookup"><span data-stu-id="b3d14-214">Import-Clixml</span></span>](Import-Clixml.md)
<span data-ttu-id="b3d14-215">Hiermee wordt een CLIXML-bestand geïmporteerd en worden de bijbehorende objecten in Power shell gemaakt.</span><span class="sxs-lookup"><span data-stu-id="b3d14-215">Imports a CLIXML file and creates corresponding objects in PowerShell.</span></span>

### [<span data-ttu-id="b3d14-216">Import-Csv</span><span class="sxs-lookup"><span data-stu-id="b3d14-216">Import-Csv</span></span>](Import-Csv.md)
<span data-ttu-id="b3d14-217">Maakt tabel achtige aangepaste objecten van de items in een bestand met door komma's gescheiden waarden (CSV).</span><span class="sxs-lookup"><span data-stu-id="b3d14-217">Creates table-like custom objects from the items in a comma-separated value (CSV) file.</span></span>

### [<span data-ttu-id="b3d14-218">Import-LocalizedData</span><span class="sxs-lookup"><span data-stu-id="b3d14-218">Import-LocalizedData</span></span>](Import-LocalizedData.md)
<span data-ttu-id="b3d14-219">Hiermee worden taalspecifieke gegevens in scripts en functies geïmporteerd op basis van de UI-cultuur die is geselecteerd voor het besturings systeem.</span><span class="sxs-lookup"><span data-stu-id="b3d14-219">Imports language-specific data into scripts and functions based on the UI culture that is selected for the operating system.</span></span>

### [<span data-ttu-id="b3d14-220">Import-PowerShellDataFile</span><span class="sxs-lookup"><span data-stu-id="b3d14-220">Import-PowerShellDataFile</span></span>](Import-PowerShellDataFile.md)
<span data-ttu-id="b3d14-221">Hiermee worden waarden uit een `.PSD1` bestand geïmporteerd zonder dat de inhoud ervan wordt aangeroepen.</span><span class="sxs-lookup"><span data-stu-id="b3d14-221">Imports values from a `.PSD1` file without invoking its contents.</span></span>

### [<span data-ttu-id="b3d14-222">Import-PSSession</span><span class="sxs-lookup"><span data-stu-id="b3d14-222">Import-PSSession</span></span>](Import-PSSession.md)
<span data-ttu-id="b3d14-223">Importeert opdrachten vanuit een andere sessie in de huidige sessie.</span><span class="sxs-lookup"><span data-stu-id="b3d14-223">Imports commands from another session into the current session.</span></span>

### [<span data-ttu-id="b3d14-224">Invoke-expressie</span><span class="sxs-lookup"><span data-stu-id="b3d14-224">Invoke-Expression</span></span>](Invoke-Expression.md)
<span data-ttu-id="b3d14-225">Voert opdrachten of expressies uit op de lokale computer.</span><span class="sxs-lookup"><span data-stu-id="b3d14-225">Runs commands or expressions on the local computer.</span></span>

### [<span data-ttu-id="b3d14-226">Invoke-RestMethod</span><span class="sxs-lookup"><span data-stu-id="b3d14-226">Invoke-RestMethod</span></span>](Invoke-RestMethod.md)
<span data-ttu-id="b3d14-227">Hiermee verzendt u een HTTP-of HTTPS-aanvraag naar een REST webservice.</span><span class="sxs-lookup"><span data-stu-id="b3d14-227">Sends an HTTP or HTTPS request to a RESTful web service.</span></span>

### [<span data-ttu-id="b3d14-228">Invoke-WebRequest</span><span class="sxs-lookup"><span data-stu-id="b3d14-228">Invoke-WebRequest</span></span>](Invoke-WebRequest.md)
<span data-ttu-id="b3d14-229">Hiermee wordt inhoud opgehaald van een webpagina op internet.</span><span class="sxs-lookup"><span data-stu-id="b3d14-229">Gets content from a web page on the internet.</span></span>

### [<span data-ttu-id="b3d14-230">Samen voegen-teken reeks</span><span class="sxs-lookup"><span data-stu-id="b3d14-230">Join-String</span></span>](Join-String.md)
<span data-ttu-id="b3d14-231">Hiermee worden objecten van de pijp lijn gecombineerd tot één teken reeks.</span><span class="sxs-lookup"><span data-stu-id="b3d14-231">Combines objects from the pipeline into a single string.</span></span>

### [<span data-ttu-id="b3d14-232">Measure-Command</span><span class="sxs-lookup"><span data-stu-id="b3d14-232">Measure-Command</span></span>](Measure-Command.md)
<span data-ttu-id="b3d14-233">Meet de tijd die nodig is voor het uitvoeren van script blokken en-cmdlets.</span><span class="sxs-lookup"><span data-stu-id="b3d14-233">Measures the time it takes to run script blocks and cmdlets.</span></span>

### [<span data-ttu-id="b3d14-234">Meting object</span><span class="sxs-lookup"><span data-stu-id="b3d14-234">Measure-Object</span></span>](Measure-Object.md)
<span data-ttu-id="b3d14-235">Hiermee worden de numerieke eigenschappen van objecten en de tekens, woorden en regels in teken reeks objecten, zoals tekst bestanden, berekend.</span><span class="sxs-lookup"><span data-stu-id="b3d14-235">Calculates the numeric properties of objects, and the characters, words, and lines in string objects, such as files of text.</span></span>

### [<span data-ttu-id="b3d14-236">Nieuwe alias</span><span class="sxs-lookup"><span data-stu-id="b3d14-236">New-Alias</span></span>](New-Alias.md)
<span data-ttu-id="b3d14-237">Hiermee maakt u een nieuwe alias.</span><span class="sxs-lookup"><span data-stu-id="b3d14-237">Creates a new alias.</span></span>

### [<span data-ttu-id="b3d14-238">Nieuw-gebeurtenis</span><span class="sxs-lookup"><span data-stu-id="b3d14-238">New-Event</span></span>](New-Event.md)
<span data-ttu-id="b3d14-239">Hiermee maakt u een nieuwe gebeurtenis.</span><span class="sxs-lookup"><span data-stu-id="b3d14-239">Creates a new event.</span></span>

### [<span data-ttu-id="b3d14-240">Nieuwe GUID</span><span class="sxs-lookup"><span data-stu-id="b3d14-240">New-Guid</span></span>](New-Guid.md)
<span data-ttu-id="b3d14-241">Hiermee maakt u een GUID.</span><span class="sxs-lookup"><span data-stu-id="b3d14-241">Creates a GUID.</span></span>

### [<span data-ttu-id="b3d14-242">New-Object</span><span class="sxs-lookup"><span data-stu-id="b3d14-242">New-Object</span></span>](New-Object.md)
<span data-ttu-id="b3d14-243">Hiermee maakt u een exemplaar van een Microsoft .NET Framework of COM-object.</span><span class="sxs-lookup"><span data-stu-id="b3d14-243">Creates an instance of a Microsoft .NET Framework or COM object.</span></span>

### [<span data-ttu-id="b3d14-244">New-TemporaryFile</span><span class="sxs-lookup"><span data-stu-id="b3d14-244">New-TemporaryFile</span></span>](New-TemporaryFile.md)
<span data-ttu-id="b3d14-245">Hiermee maakt u een tijdelijk bestand.</span><span class="sxs-lookup"><span data-stu-id="b3d14-245">Creates a temporary file.</span></span>

### [<span data-ttu-id="b3d14-246">Nieuw-time span</span><span class="sxs-lookup"><span data-stu-id="b3d14-246">New-TimeSpan</span></span>](New-TimeSpan.md)
<span data-ttu-id="b3d14-247">Hiermee maakt u een time span-object.</span><span class="sxs-lookup"><span data-stu-id="b3d14-247">Creates a TimeSpan object.</span></span>

### [<span data-ttu-id="b3d14-248">Nieuwe variabele</span><span class="sxs-lookup"><span data-stu-id="b3d14-248">New-Variable</span></span>](New-Variable.md)
<span data-ttu-id="b3d14-249">Hiermee maakt u een nieuwe variabele.</span><span class="sxs-lookup"><span data-stu-id="b3d14-249">Creates a new variable.</span></span>

### [<span data-ttu-id="b3d14-250">Out-file</span><span class="sxs-lookup"><span data-stu-id="b3d14-250">Out-File</span></span>](Out-File.md)
<span data-ttu-id="b3d14-251">Hiermee wordt de uitvoer naar een bestand verzonden.</span><span class="sxs-lookup"><span data-stu-id="b3d14-251">Sends output to a file.</span></span>

### [<span data-ttu-id="b3d14-252">Out-GridView</span><span class="sxs-lookup"><span data-stu-id="b3d14-252">Out-GridView</span></span>](Out-GridView.md)
<span data-ttu-id="b3d14-253">Hiermee wordt de uitvoer naar een interactieve tabel in een afzonderlijk venster verzonden.</span><span class="sxs-lookup"><span data-stu-id="b3d14-253">Sends output to an interactive table in a separate window.</span></span>

### [<span data-ttu-id="b3d14-254">Out-Printer</span><span class="sxs-lookup"><span data-stu-id="b3d14-254">Out-Printer</span></span>](Out-Printer.md)
<span data-ttu-id="b3d14-255">Hiermee wordt uitvoer naar een printer verzonden.</span><span class="sxs-lookup"><span data-stu-id="b3d14-255">Sends output to a printer.</span></span>

### [<span data-ttu-id="b3d14-256">Out-teken reeks</span><span class="sxs-lookup"><span data-stu-id="b3d14-256">Out-String</span></span>](Out-String.md)
<span data-ttu-id="b3d14-257">Voert invoer objecten uit als teken reeksen.</span><span class="sxs-lookup"><span data-stu-id="b3d14-257">Outputs input objects as a strings.</span></span>

### [<span data-ttu-id="b3d14-258">Read-host</span><span class="sxs-lookup"><span data-stu-id="b3d14-258">Read-Host</span></span>](Read-Host.md)
<span data-ttu-id="b3d14-259">Hiermee wordt een regel invoer uit de-console gelezen.</span><span class="sxs-lookup"><span data-stu-id="b3d14-259">Reads a line of input from the console.</span></span>

### [<span data-ttu-id="b3d14-260">REGI ster-EngineEvent</span><span class="sxs-lookup"><span data-stu-id="b3d14-260">Register-EngineEvent</span></span>](Register-EngineEvent.md)
<span data-ttu-id="b3d14-261">Abonneren op gebeurtenissen die worden gegenereerd door de Power shell-engine en door de `New-Event` cmdlet.</span><span class="sxs-lookup"><span data-stu-id="b3d14-261">Subscribes to events that are generated by the PowerShell engine and by the `New-Event` cmdlet.</span></span>

### [<span data-ttu-id="b3d14-262">REGI ster-ObjectEvent</span><span class="sxs-lookup"><span data-stu-id="b3d14-262">Register-ObjectEvent</span></span>](Register-ObjectEvent.md)
<span data-ttu-id="b3d14-263">Abonneer u op de gebeurtenissen die door een Microsoft .NET Framework-object worden gegenereerd.</span><span class="sxs-lookup"><span data-stu-id="b3d14-263">Subscribes to the events that are generated by a Microsoft .NET Framework object.</span></span>

### [<span data-ttu-id="b3d14-264">Alias verwijderen</span><span class="sxs-lookup"><span data-stu-id="b3d14-264">Remove-Alias</span></span>](Remove-Alias.md)
<span data-ttu-id="b3d14-265">Een alias verwijderen uit de huidige sessie.</span><span class="sxs-lookup"><span data-stu-id="b3d14-265">Remove an alias from the current session.</span></span>

### [<span data-ttu-id="b3d14-266">Remove-gebeurtenis</span><span class="sxs-lookup"><span data-stu-id="b3d14-266">Remove-Event</span></span>](Remove-Event.md)
<span data-ttu-id="b3d14-267">Hiermee verwijdert u gebeurtenissen uit de wachtrij van de gebeurtenis.</span><span class="sxs-lookup"><span data-stu-id="b3d14-267">Deletes events from the event queue.</span></span>

### [<span data-ttu-id="b3d14-268">Remove-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="b3d14-268">Remove-PSBreakpoint</span></span>](Remove-PSBreakpoint.md)
<span data-ttu-id="b3d14-269">Hiermee worden onderbrekings punten uit de huidige console verwijderd.</span><span class="sxs-lookup"><span data-stu-id="b3d14-269">Deletes breakpoints from the current console.</span></span>

### [<span data-ttu-id="b3d14-270">Remove-TypeData</span><span class="sxs-lookup"><span data-stu-id="b3d14-270">Remove-TypeData</span></span>](Remove-TypeData.md)
<span data-ttu-id="b3d14-271">Hiermee verwijdert u uitgebreide typen van de huidige sessie.</span><span class="sxs-lookup"><span data-stu-id="b3d14-271">Deletes extended types from the current session.</span></span>

### [<span data-ttu-id="b3d14-272">Remove-variabele</span><span class="sxs-lookup"><span data-stu-id="b3d14-272">Remove-Variable</span></span>](Remove-Variable.md)
<span data-ttu-id="b3d14-273">Hiermee verwijdert u een variabele en de bijbehorende waarde.</span><span class="sxs-lookup"><span data-stu-id="b3d14-273">Deletes a variable and its value.</span></span>

### [<span data-ttu-id="b3d14-274">Select-Object</span><span class="sxs-lookup"><span data-stu-id="b3d14-274">Select-Object</span></span>](Select-Object.md)
<span data-ttu-id="b3d14-275">Objecten of object eigenschappen selecteren.</span><span class="sxs-lookup"><span data-stu-id="b3d14-275">Selects objects or object properties.</span></span>

### [<span data-ttu-id="b3d14-276">Selecteer teken reeks</span><span class="sxs-lookup"><span data-stu-id="b3d14-276">Select-String</span></span>](Select-String.md)
<span data-ttu-id="b3d14-277">Zoeken naar tekst in teken reeksen en bestanden.</span><span class="sxs-lookup"><span data-stu-id="b3d14-277">Finds text in strings and files.</span></span>

### [<span data-ttu-id="b3d14-278">Select-XML</span><span class="sxs-lookup"><span data-stu-id="b3d14-278">Select-Xml</span></span>](Select-Xml.md)
<span data-ttu-id="b3d14-279">Zoekt tekst in een XML-teken reeks of-document.</span><span class="sxs-lookup"><span data-stu-id="b3d14-279">Finds text in an XML string or document.</span></span>

### [<span data-ttu-id="b3d14-280">Bericht verzenden</span><span class="sxs-lookup"><span data-stu-id="b3d14-280">Send-MailMessage</span></span>](Send-MailMessage.md)
<span data-ttu-id="b3d14-281">Hiermee verzendt u een e-mail bericht.</span><span class="sxs-lookup"><span data-stu-id="b3d14-281">Sends an email message.</span></span>

### [<span data-ttu-id="b3d14-282">Set-alias</span><span class="sxs-lookup"><span data-stu-id="b3d14-282">Set-Alias</span></span>](Set-Alias.md)
<span data-ttu-id="b3d14-283">Hiermee maakt of wijzigt u een alias voor een cmdlet of een andere opdracht in de huidige Power shell-sessie.</span><span class="sxs-lookup"><span data-stu-id="b3d14-283">Creates or changes an alias for a cmdlet or other command in the current PowerShell session.</span></span>

### [<span data-ttu-id="b3d14-284">Set-date</span><span class="sxs-lookup"><span data-stu-id="b3d14-284">Set-Date</span></span>](Set-Date.md)
<span data-ttu-id="b3d14-285">Hiermee wijzigt u de systeem tijd op de computer naar een tijd die u opgeeft.</span><span class="sxs-lookup"><span data-stu-id="b3d14-285">Changes the system time on the computer to a time that you specify.</span></span>

### [<span data-ttu-id="b3d14-286">Set-MarkdownOption</span><span class="sxs-lookup"><span data-stu-id="b3d14-286">Set-MarkdownOption</span></span>](Set-MarkdownOption.md)
<span data-ttu-id="b3d14-287">Hiermee stelt u de kleuren en stijlen in die worden gebruikt voor het weer geven van de inhoud van de korting</span><span class="sxs-lookup"><span data-stu-id="b3d14-287">Sets the colors and styles used for rendering Markdown content in the console.</span></span>

### [<span data-ttu-id="b3d14-288">Set-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="b3d14-288">Set-PSBreakpoint</span></span>](Set-PSBreakpoint.md)
<span data-ttu-id="b3d14-289">Hiermee stelt u een onderbrekings punt in voor een regel, opdracht of variabele.</span><span class="sxs-lookup"><span data-stu-id="b3d14-289">Sets a breakpoint on a line, command, or variable.</span></span>

### [<span data-ttu-id="b3d14-290">Set-TraceSource</span><span class="sxs-lookup"><span data-stu-id="b3d14-290">Set-TraceSource</span></span>](Set-TraceSource.md)
<span data-ttu-id="b3d14-291">Hiermee configureert, start en stopt u het traceren van Power shell-onderdelen.</span><span class="sxs-lookup"><span data-stu-id="b3d14-291">Configures, starts, and stops a trace of PowerShell components.</span></span>

### [<span data-ttu-id="b3d14-292">Set-variabele</span><span class="sxs-lookup"><span data-stu-id="b3d14-292">Set-Variable</span></span>](Set-Variable.md)
<span data-ttu-id="b3d14-293">Hiermee stelt u de waarde van een variabele.</span><span class="sxs-lookup"><span data-stu-id="b3d14-293">Sets the value of a variable.</span></span> <span data-ttu-id="b3d14-294">Hiermee maakt u de variabele als er een met de aangevraagde naam niet bestaat.</span><span class="sxs-lookup"><span data-stu-id="b3d14-294">Creates the variable if one with the requested name does not exist.</span></span>

### [<span data-ttu-id="b3d14-295">Weer geven-opdracht</span><span class="sxs-lookup"><span data-stu-id="b3d14-295">Show-Command</span></span>](Show-Command.md)
<span data-ttu-id="b3d14-296">Hiermee worden de Power shell-opdracht gegevens in een grafisch venster weer gegeven.</span><span class="sxs-lookup"><span data-stu-id="b3d14-296">Displays PowerShell command information in a graphical window.</span></span>

### [<span data-ttu-id="b3d14-297">Weer geven-prijs verlaging</span><span class="sxs-lookup"><span data-stu-id="b3d14-297">Show-Markdown</span></span>](Show-Markdown.md)
<span data-ttu-id="b3d14-298">Toont een bestand of teken reeks in de-console op een beschrijvende manier met VT100-escape reeksen of in een browser met behulp van HTML.</span><span class="sxs-lookup"><span data-stu-id="b3d14-298">Shows a Markdown file or string in the console in a friendly way using VT100 escape sequences or in a browser using HTML.</span></span>

### [<span data-ttu-id="b3d14-299">Sorteer object</span><span class="sxs-lookup"><span data-stu-id="b3d14-299">Sort-Object</span></span>](Sort-Object.md)
<span data-ttu-id="b3d14-300">Objecten sorteren op eigenschaps waarden.</span><span class="sxs-lookup"><span data-stu-id="b3d14-300">Sorts objects by property values.</span></span>

### [<span data-ttu-id="b3d14-301">Start-slaap stand</span><span class="sxs-lookup"><span data-stu-id="b3d14-301">Start-Sleep</span></span>](Start-Sleep.md)
<span data-ttu-id="b3d14-302">Hiermee wordt de activiteit in een script of sessie onderbroken gedurende de opgegeven periode.</span><span class="sxs-lookup"><span data-stu-id="b3d14-302">Suspends the activity in a script or session for the specified period of time.</span></span>

### [<span data-ttu-id="b3d14-303">T-object</span><span class="sxs-lookup"><span data-stu-id="b3d14-303">Tee-Object</span></span>](Tee-Object.md)
<span data-ttu-id="b3d14-304">Slaat de uitvoer van de opdracht op in een bestand of variabele, en verzendt deze ook naar de pijp lijn.</span><span class="sxs-lookup"><span data-stu-id="b3d14-304">Saves command output in a file or variable and also sends it down the pipeline.</span></span>

### [<span data-ttu-id="b3d14-305">Test-JSON</span><span class="sxs-lookup"><span data-stu-id="b3d14-305">Test-Json</span></span>](Test-Json.md)
<span data-ttu-id="b3d14-306">Test of een teken reeks een geldig JSON-document is</span><span class="sxs-lookup"><span data-stu-id="b3d14-306">Tests whether a string is a valid JSON document</span></span>

### [<span data-ttu-id="b3d14-307">Tracering-opdracht</span><span class="sxs-lookup"><span data-stu-id="b3d14-307">Trace-Command</span></span>](Trace-Command.md)
<span data-ttu-id="b3d14-308">Hiermee wordt een tracering van de opgegeven expressie of opdracht geconfigureerd en gestart.</span><span class="sxs-lookup"><span data-stu-id="b3d14-308">Configures and starts a trace of the specified expression or command.</span></span>

### [<span data-ttu-id="b3d14-309">Blok kering van bestand opheffen</span><span class="sxs-lookup"><span data-stu-id="b3d14-309">Unblock-File</span></span>](Unblock-File.md)
<span data-ttu-id="b3d14-310">De blok kering van bestanden die zijn gedownload van het internet.</span><span class="sxs-lookup"><span data-stu-id="b3d14-310">Unblocks files that were downloaded from the Internet.</span></span>

### [<span data-ttu-id="b3d14-311">Registratie ongedaan maken-gebeurtenis</span><span class="sxs-lookup"><span data-stu-id="b3d14-311">Unregister-Event</span></span>](Unregister-Event.md)
<span data-ttu-id="b3d14-312">Hiermee wordt een gebeurtenis abonnement geannuleerd.</span><span class="sxs-lookup"><span data-stu-id="b3d14-312">Cancels an event subscription.</span></span>

### [<span data-ttu-id="b3d14-313">Update-FormatData</span><span class="sxs-lookup"><span data-stu-id="b3d14-313">Update-FormatData</span></span>](Update-FormatData.md)
<span data-ttu-id="b3d14-314">Hiermee werkt u de opmaak gegevens in de huidige sessie bij.</span><span class="sxs-lookup"><span data-stu-id="b3d14-314">Updates the formatting data in the current session.</span></span>

### [<span data-ttu-id="b3d14-315">Update-List</span><span class="sxs-lookup"><span data-stu-id="b3d14-315">Update-List</span></span>](Update-List.md)
<span data-ttu-id="b3d14-316">Hiermee worden items toegevoegd aan en verwijderd uit een eigenschaps waarde die een verzameling objecten bevat.</span><span class="sxs-lookup"><span data-stu-id="b3d14-316">Adds items to and removes items from a property value that contains a collection of objects.</span></span>

### [<span data-ttu-id="b3d14-317">Update-TypeData</span><span class="sxs-lookup"><span data-stu-id="b3d14-317">Update-TypeData</span></span>](Update-TypeData.md)
<span data-ttu-id="b3d14-318">Hiermee werkt u de uitgebreide type gegevens in de sessie bij.</span><span class="sxs-lookup"><span data-stu-id="b3d14-318">Updates the extended type data in the session.</span></span>

### [<span data-ttu-id="b3d14-319">Wacht debugger</span><span class="sxs-lookup"><span data-stu-id="b3d14-319">Wait-Debugger</span></span>](Wait-Debugger.md)
<span data-ttu-id="b3d14-320">Stopt een script in het fout opsporingsprogramma voordat de volgende instructie in het script wordt uitgevoerd.</span><span class="sxs-lookup"><span data-stu-id="b3d14-320">Stops a script in the debugger before running the next statement in the script.</span></span>

### [<span data-ttu-id="b3d14-321">Wachten gebeurtenis</span><span class="sxs-lookup"><span data-stu-id="b3d14-321">Wait-Event</span></span>](Wait-Event.md)
<span data-ttu-id="b3d14-322">Er wordt gewacht tot een bepaalde gebeurtenis is opgetreden voordat de uitvoering wordt voortgezet.</span><span class="sxs-lookup"><span data-stu-id="b3d14-322">Waits until a particular event is raised before continuing to run.</span></span>

### [<span data-ttu-id="b3d14-323">Schrijf fouten opsporen</span><span class="sxs-lookup"><span data-stu-id="b3d14-323">Write-Debug</span></span>](Write-Debug.md)
<span data-ttu-id="b3d14-324">Schrijft een debug-bericht naar de-console.</span><span class="sxs-lookup"><span data-stu-id="b3d14-324">Writes a debug message to the console.</span></span>

### [<span data-ttu-id="b3d14-325">Schrijf fout</span><span class="sxs-lookup"><span data-stu-id="b3d14-325">Write-Error</span></span>](Write-Error.md)
<span data-ttu-id="b3d14-326">Schrijft een object naar de fout stroom.</span><span class="sxs-lookup"><span data-stu-id="b3d14-326">Writes an object to the error stream.</span></span>

### [<span data-ttu-id="b3d14-327">Write-host</span><span class="sxs-lookup"><span data-stu-id="b3d14-327">Write-Host</span></span>](Write-Host.md)
<span data-ttu-id="b3d14-328">Hiermee wordt de aangepaste uitvoer naar een host geschreven.</span><span class="sxs-lookup"><span data-stu-id="b3d14-328">Writes customized output to a host.</span></span>

### [<span data-ttu-id="b3d14-329">Write-Information</span><span class="sxs-lookup"><span data-stu-id="b3d14-329">Write-Information</span></span>](Write-Information.md)
<span data-ttu-id="b3d14-330">Hiermee geeft u op hoe Power shell gegevens streamen voor een opdracht verwerkt.</span><span class="sxs-lookup"><span data-stu-id="b3d14-330">Specifies how PowerShell handles information stream data for a command.</span></span>

### [<span data-ttu-id="b3d14-331">Write-output</span><span class="sxs-lookup"><span data-stu-id="b3d14-331">Write-Output</span></span>](Write-Output.md)
<span data-ttu-id="b3d14-332">Hiermee worden de opgegeven objecten verzonden naar de volgende opdracht in de pijp lijn.</span><span class="sxs-lookup"><span data-stu-id="b3d14-332">Sends the specified objects to the next command in the pipeline.</span></span> <span data-ttu-id="b3d14-333">Als de opdracht de laatste opdracht in de pijp lijn is, worden de objecten weer gegeven in de-console.</span><span class="sxs-lookup"><span data-stu-id="b3d14-333">If the command is the last command in the pipeline, the objects are displayed in the console.</span></span>

### [<span data-ttu-id="b3d14-334">Schrijf voortgang</span><span class="sxs-lookup"><span data-stu-id="b3d14-334">Write-Progress</span></span>](Write-Progress.md)
<span data-ttu-id="b3d14-335">Hiermee wordt een voortgangs balk binnen een Power shell-opdracht venster weer gegeven.</span><span class="sxs-lookup"><span data-stu-id="b3d14-335">Displays a progress bar within a PowerShell command window.</span></span>

### [<span data-ttu-id="b3d14-336">Write-verbose</span><span class="sxs-lookup"><span data-stu-id="b3d14-336">Write-Verbose</span></span>](Write-Verbose.md)
<span data-ttu-id="b3d14-337">Schrijft tekst naar de uitgebreide berichten stroom.</span><span class="sxs-lookup"><span data-stu-id="b3d14-337">Writes text to the verbose message stream.</span></span>

### [<span data-ttu-id="b3d14-338">Waarschuwing voor schrijven</span><span class="sxs-lookup"><span data-stu-id="b3d14-338">Write-Warning</span></span>](Write-Warning.md)
<span data-ttu-id="b3d14-339">Hiermee schrijft u een waarschuwings bericht.</span><span class="sxs-lookup"><span data-stu-id="b3d14-339">Writes a warning message.</span></span>
